--- a/CanvasDrawing/CanvasDrawing.csproj
+++ b/CanvasDrawing/CanvasDrawing.csproj
@@ -60,7 +60,10 @@
     <Compile Include="Game\GameInicio.cs" />
     <Compile Include="Game\GameOverScreen.cs" />
     <Compile Include="Game\GameVictoryScreen.cs" />
+    <Compile Include="Game\GuiElement.cs" />
+    <Compile Include="Game\GuiManager.cs" />
     <Compile Include="Game\Gun.cs" />
+    <Compile Include="Game\HealthBar.cs" />
     <Compile Include="Game\Player.cs" />
     <Compile Include="Game\TimerBoard.cs" />
     <Compile Include="Game\Wall.cs" />
@@ -213,11 +216,14 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Resources\grayHeart.png" />
+    <Content Include="Resources\HP.png" />
     <Content Include="Resources\MainCharacter\bulletb.png" />
     <Content Include="Resources\MainCharacter\cannon_down.png" />
     <Content Include="Resources\MainCharacter\cannon_left.png" />
     <Content Include="Resources\MainCharacter\cannon_right.png" />
     <Content Include="Resources\MainCharacter\cannon_up.png" />
+    <Content Include="Resources\redHeart.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
